[metadata]
name = fmetools
version = attr: fmetools.__version__
author = Safe Software Inc.
description = Tools for extending Safe Software's FME using Python.
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = FME fmeobjects
url = https://github.com/safesoftware/fmetools
license = BSD
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
dev =
    isort
    pytest
    hypothesis
    black>=22.1.0
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.2

[bdist_wheel]
universal=1
