[metadata]
name = fmetools
version = attr: fmetools.__version__
author = Safe Software Inc.
description = Tools for extending Safe Software's FME using Python.
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = FME fmeobjects
url = https://github.com/safesoftware/fmetools
project_urls =
    Documentation = https://docs.safe.com/fme/html/fmetools/
license = BSD
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8.0
include_package_data = True

[options.packages.find]
where=src

[bdist_wheel]
universal=1
