[metadata]
name = fmetools
version = attr: fmetools.__version__
author = Safe Software Inc.
description = Tools for extending Safe Software's FME using Python.
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = FME fmeobjects
url = https://github.com/safesoftware/fmetools
project_urls =
    Documentation = https://docs.safe.com/fme/html/fmetools/
license = BSD
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    build>=1.2.2
    pytest>=8.3.5
    pytest-cov>=5.0.0
    pytest-recording>=0.13.2
    hypothesis>=6.113.0
    ruff>=0.14.4

